--- a/SpatialTrial/README.asciidoc
+++ b/SpatialTrial/README.asciidoc
@@ -18,12 +18,7 @@ Running
 -------
 
 This project is written in scala and uses SBT. With scala and SBT installed,
-you can run the tests by executing:
-
-[source,Bash]
-----
-sbt test
-----
+you can run the tests by executing: `sbt test`
 
 References
 ----------
